# nvidia-nemotron-challenge

./: .env.example  .gitignore  CNAME  LICENSE  README.md  base.html  corpus.html  corpus.py  index.html  metrics.html  pyproject.toml  reasoning.py  synthetic.html  train_kaggle.py  train_sft.py  training.html  upload_adapter.py  upload_to_kaggle_local.py
augmenters/: concatenation.py  spelling.py  splitting.py
investigators/: get_examples.py
reasoners/: cipher.py  cryptarithm.py  cryptarithm_dsl.py  gravity.py  numeral.py  unit_conversion.py
